# com-areal-imagery

./: Dockerfile  Dockerfile.dedect.flags  Dockerfile.train.flags  README.md  build.sh  pyproject.toml  run.sh  test_flag_dedect.py  test_flag_query.py  test_flag_train.py  test_query.py  test_train.py
datasets/: data.yaml
datasets/Flags/: data.yaml
datasets/datasets/train/: labels.cache
datasets/datasets/valid/: labels.cache
dedect/: Dockerfile.dedect.flags  Dockerfile.dedect2.flags  pyproject.toml  test_flag_dedect.py
k8s/: flages-dedect.yaml  flags-train-job.yaml
train/: Dockerfile.train.flags  gputest.py  pyproject.toml  test_flag_train.py
