[project]
name = "com-areal-imagery"
version = "0.1.0"
description = "A Python project with specified dependencies"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
#	"torch>=2.6.0",
#	"torchvision>=0.20.0",
#    "torchaudio",
    "jupyter",
    "nest_asyncio",
    "python-dotenv",
    "langchain==0.3.10",
    "langchain-ollama",
    "matplotlib",
    "jupyterlab_execute_time",
    "python-dateutil",
    "ultralytics",
    "seaborn",
    "pandas",
    "opencv-python-headless==4.8.1.78",
    "squarify",
    "opencv-python>=4.11.0.86",
    "numpy<2",
    "split-folders>=0.5.1",
    "flask>=3.1.1",
]

#[tool.uv.sources]
#torch = [
#  { index = "pytorch-cu124", marker = "sys_platform == 'linux'"  },
#]
#torchvision = [
#  { index = "pytorch-cu124", marker = "sys_platform == 'linux'" },
#]

#[[tool.uv.index]]
#name = "pytorch-cu124"
#url = "https://download.pytorch.org/whl/cu124"
#explicit = true
